tests/golden/errors/unresolved_name.py
x = eval("1 + 1")
print(x)
